Change logic so no duplicate entries in result Attempt #1